--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,8 +30,8 @@
                 <% end %>
                 <div class="card-footer mt-2">
                     <p>Email: <%= @user.email %></p>
+                    <%= render 'userating' %>
                     <%= render 'hostrating' %>
-                    
                   
                 </div>
             </div>
