--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,8 +24,10 @@
         <div class="card-body">
         <p class="ms-3 mt-2">Nombre de séances proposé: <%= @user.hosted_workouts.count %> </p>
         <p class="ms-3 mt-2">Nombre de réservations: <%= @user.reserved_workouts.count %> </p>
-        <p class="ms-3 mt-2">Note en tant que participant: <%= @user.reserved_workouts.count %> </p>
-        <p class="ms-3 mt-2">Note en tant qu'hôte:<%= @user.reserved_workouts.count %> </p>
+        
+        <p class="ms-3 mt-2">Note en tant que participant: <%= @user.average_host_rating %>⭐️ </p>
+        <p class="ms-3 mt-2">Note en tant qu'hôte: <%= @user.average_user_rating %>⭐️</p>
+        
         </div>
     </div>
     </div>
