--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,11 +41,11 @@
     </div>
     <div class="col">
         <div class="card text-bg-danger me-auto h-100" style="max-width: 22rem;">
-            <p class="card-header">Paiement</p>
+            <p class="card-header">Paiement/Credit</p>
             <div class="card-body">
-                <h5 class="card-title">Ciquez pour parameter votre moyen de paiement</h5>
+                <h5 class="card-title">Ciquez pour voir votre crédit et vos paiements</h5>
                 <div class="card-footer">
-                    <button type="button" class="btn btn-danger btn-lg">Paiement</button>
+                    <%= link_to "Paiement/Credit", checkouts_path, class: "btn btn-danger btn-lg m-0" %>
                 </div>
             </div>
         </div>
