moyenne dans reservation/show

--- a/app/views/reservations/_hostrating.html.erb
+++ b/app/views/reservations/_hostrating.html.erb
@@ -1,24 +1,32 @@
 
-<% if reservation.host_rating.nil? %>
-    <%= form_with(model: reservation, url: reservation_path(reservation), method: :patch) do |form| %>
-        <div class="dropdown">
-            <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Laisse une note
-            </a>
-                <ul class="dropdown-menu">
-                    <% (1..5).each do |rating| %>
-                        <li>
-                            <%= form.radio_button :host_rating, rating %>
-                            <%= form.label "host_rating_#{rating}" do %>
-                            <%= raw("<i class='bi bi-star-fill'></i>" * rating) %>
-                            <% end %>
-                                      
-                        </li>
-                    <% end %>
-                            <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm' %>
-                </ul>
-        </div>
-    <% end %>
+<%= form_with(model: reservation, url: reservation_path(reservation), method: :patch) do |form| %>
+    <div class="dropdown">
+        <a class="btn btn-primary btn-sm dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Laisse une note et <br>
+             un commentaire
+        </a>
+        <ul class="dropdown-menu">
+            <% if reservation.host_rating.nil? %>
+                <% (1..5).each do |rating| %>
+                    <li>
+                        <%= form.radio_button :host_rating, rating %>
+                        <%= form.label "host_rating_#{rating}" do %>
+                        <%= raw("<i class='bi bi-star-fill'></i>" * rating) %>
+                        <% end %>
+                    </li>
+                <% end %>
             <% else %>
-            <p>Vous avez déjà soumis une note .</p>
+                <p>Vous avez déjà soumis une note.</p>
+            <% end %>
+
+            <% if reservation.host_comment.nil? %>
+                <%= form.label :host_comment, 'Commentaire pour l\'hôte' %>
+                <%= form.text_area :host_comment, rows: 5, cols: 40 %>
+            <% else %>
+                <p>Vous avez déjà soumis un commentaire.</p>
+            <% end %>
+
+            <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm', disabled: reservation.host_rating.present? && reservation.host_comment.present? %>
+        </ul>
+    </div>
 <% end %>
