--- a/app/views/reservations/_userating.html.erb
+++ b/app/views/reservations/_userating.html.erb
@@ -1,24 +1,31 @@
 
-<% if reservation.user_rating.nil? %>
     <%= form_with(model: reservation, url: reservation_path(reservation), method: :patch) do |form| %>
         <div class="dropdown">
             <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Laisse une note
+                Laisse une note et un commentaire
             </a>
-                <ul class="dropdown-menu">
+            <ul class="dropdown-menu">
+                <% if reservation.user_rating.nil? %>
                     <% (1..5).each do |rating| %>
                         <li>
                             <%= form.radio_button :user_rating, rating %>
                             <%= form.label "user_rating_#{rating}" do %>
                             <%= raw("<i class='bi bi-star-fill'></i>" * rating) %>
                             <% end %>
-                                      
                         </li>
                     <% end %>
-                            <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm' %>
-                </ul>
+                <% else %>
+                    <p>Vous avez déjà soumis une note pour cette réservation.</p>
+                <% end %>
+
+                <% if reservation.user_comment.nil? %>
+                    <%= form.label :user_comment, 'Commentaire pour l\'hôte' %>
+                    <%= form.text_area :user_comment, rows: 5, cols: 40 %>
+                <% else %>
+                    <p>Vous avez déjà soumis un commentaire pour cette réservation.</p>
+                <% end %>
+
+                <%= form.submit 'Envoyer', class: 'btn btn-primary  btn-sm', disabled: reservation.user_rating.present? && reservation.user_comment.present? %>
+            </ul>
         </div>
     <% end %>
-            <% else %>
-            <p>Vous avez déjà soumis une note pour cette réservation.</p>
-<% end %>
