--- a/app/views/user_mailer/evaluate_host.html.erb
+++ b/app/views/user_mailer/evaluate_host.html.erb
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Salut <%= @user.pseudo %> merci d'avoir confirmé la fin de la séance !</h1>
+    <p>Nous avons procédé au paiement de l'host</p>
     
     <p>Sportivement,</p>
     <p>À très vite sur keella.fly.dev !</p>
