--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Vos crédits et paiements</h1>
-  <h2>Votre crédit : <%= @user.credit %> €</h2>
+  <h2>Votre crédit : <%= @user.credit.round(2) %> €</h2>
   <h2>Acheter des crédits</h2>
   <%= form_with url: checkout_create_path, method: :post, local: true do |form| %>
   <div class="form-group">
