--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,9 +24,18 @@
         <div class="card-body">
         <p class="ms-3 mt-2">Nombre de séances proposé: <%= @user.hosted_workouts.count %> </p>
         <p class="ms-3 mt-2">Nombre de réservations: <%= @user.reserved_workouts.count %> </p>
+
+        <% if @average_host_rating.nil? %>
+                <p>Pas encore de notes</p>
+        <% else %>
+            <p class="ms-3 mt-2">Note en tant que participant: <%= @average_host_rating.round(2) %>⭐️ </p>
+        <% end %>
         
-        <p class="ms-3 mt-2">Note en tant que participant: <%= @user.average_host_rating %>⭐️ </p>
-        <p class="ms-3 mt-2">Note en tant qu'hôte: <%= @user.average_user_rating %>⭐️</p>
+        <% if @average_user_rating.nil? %>
+                <p>Pas encore de notes</p>
+        <% else %>
+            <p class="ms-3 mt-2">Note en tant qu'hôte: <%= @average_user_rating.round(2) %>⭐️</p>
+        <% end %>
         
         </div>
     </div>
