--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -5,74 +5,6 @@
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Mes Annonces</h1>
 </section>
-<section class="container shadow rounded py-5">
-    <div class="table-responsive small">
-        <table class="table table-striped ">
-
-        <tbody class="table-group-divider">
-        <%@workouts.each do |workout|%>
-                  <thead >
-            <tr class="table-primary">
-              <th scope="col">Titre</th>
-              <th scope="col">Adresse</th>
-              <th scope="col">Prix</th>
-              <th scope="col">Capacité</th>
-              <th scope="col">Place disponible</th>
-              <th scope="col">Date</th>
-              <th scope="col">Début / Fin</th>
-              <th scope="col">Durée</th>
-              <th scope="col">Boutons</th>
-            </tr>
-          </thead>
-        <tbody class="table-group-divider">
-        <tr>
-              <td><%=workout.title%></td>
-              <td><%=workout.location%></td>
-              <td><%=workout.price%> €</td>
-              <td><%=workout.participant_number%> personnes</td>
-              <td><%=workout.places_available%></td>
-              <td><%=workout.start_date.strftime("%d %B %Y")%></td>
-              <td>De <%=workout.start_date.strftime("%H:%M")%> à <%=workout.end_date.strftime("%H:%M")%></td>
-              <td><%=workout.duration / 60%> minutes</td>
-                <td>
-                <div class="btn-group">
-                <%= link_to "Voir la page workout", workout_path(workout), class: 'btn btn-success'%>                
-                <%= link_to "Modifier le workout", edit_workout_path(workout), class: 'btn btn-warning'%>
-                </div>
-                </td>
-            </tr>
-            <thead>
-                <tr class="table-success">
-                    <th scope="col"></th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Note</th>
-                    <th scope="col">Ville</th>
-                    <th scope="col">Status</th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody >
-            <%workout.reservations.each do |reservation|%>
-                <%=turbo_frame_tag "tab" do%>
-                    <%= render partial: "reservation-tab", locals: { reservation: reservation }%>
-                <%end%>
-            <%end%> 
-        <%end%>
-          </tbody>
-        </table>
-    </div>
-</section>
-
-<script>
-    document.addEventListener("turbo:load", function() {
-        const toggleDropdown = document.getElementById("toggle-dropdown");
-        const editPeopleDropdown = document.getElementById("edit-people-dropdown");
-
-        toggleDropdown.addEventListener("click", function() {
-            editPeopleDropdown.classList.toggle("show");
-        });
-    });
-</script>
+<%=turbo_frame_tag "fullpage" do%>
+    <%= render partial: "reservation-tab", locals: { workouts: @workouts.all }%>
+<%end%>
