--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -90,6 +90,10 @@
               <li>Date de début : <strong><%= @workout.start_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
               <li>Date de fin : <strong><%= @workout.end_date.strftime("%d/%m/%Y %H:%M") %></strong></li>
             </ul>
+            <div class="d-flex justify-content-around border-top py-3">
+              <p><strong>Total</strong> (prix x nombre de place):</p>
+              <p id="total"><%= @workout.price %> €</p>
+            </div>
             <div>
               <% if user_signed_in?  %>
                 <% if @workout.is_free %>
@@ -100,12 +104,11 @@
                     
                     <%= form.hidden_field :workout_id, value: @workout.id %>
                     <%= form.label :quantity, "Nombre de place",class:"floatingInput" %>
-                    <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), class: "form-control" %>
+                    <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), id: "quantity", class: "form-control" %>
                     
-                    <%= form.submit "Envoyer une demande de réservation", class:"w-100 py-1 mb-2 btn btn-primary rounded-3" %>
+                    <%= form.submit "Envoyer une demande de réservation", class:"w-100 py-2 my-3 btn btn-primary rounded-3" %>
                     
-                    <% end %>
-                    <%#= button_to "Envoyer une demande de réservation #{@workout.price}€", workout_reservations_path(@workout), method: :post, data:{turbo_frame: "places-available"}, class:"w-100 btn btn-lg btn-primary" %>
+                    <% end %>                    
                   <% else %>
                     <%= button_to "Il n'y a plus de place", '#', class:"w-100 btn btn-lg btn-primary disabled" %>
                   <% end %>
@@ -122,3 +125,7 @@
     </div>
   </section>
 </div>
+
+<script type="application/ld+json">
+    <%= workout_jsonld(@workout) %>
+</script>
