png to webp logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="py-3 my-4 border-top">
     <div class="text-center">
         <%= link_to "#", class: "back-to-top" do %>
-            <%= image_tag "logokeella.png", alt: "Logo keella", class:"img-fluid" %>
+            <%= image_tag "logokeella.webp", alt: "Logo keella", class:"img-fluid" %>
         <% end %>
     <div/>
     
