--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -104,7 +104,7 @@
                     
                     <%= form.hidden_field :workout_id, value: @workout.id %>
                     <%= form.label :quantity, "Nombre de place",class:"floatingInput" %>
-                    <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), id: "quantity", class: "form-control" %>
+                    <%= form.select :quantity, options_for_select((1..@workout.places_available).to_a), id: "quantity", class: "form-control", data: { price: @workout.price } %>
                     
                     <%= form.submit "Envoyer une demande de réservation", class:"w-100 py-2 my-3 btn btn-primary rounded-3" %>
                     
