--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -60,8 +60,12 @@
                 <%end%>
                 </div>
               </a>
-            </div>            
-            <span><i class="bi bi-star-fill"><%= @workout.average_user_rating %></i></span>
+            </div>
+            <% if @average_user_rating.nil? %>
+                  <p>Pas encore de notes</p>
+            <% else %>            
+            <span><i class="bi bi-star-fill"><%= @average_user_rating.round(1) %></i></span>
+            <%end%>
           </div>
         </div>
         <hr>
