still not working lmaooo

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -6,5 +6,5 @@
     <h1 class="text-light">Mes Annonces</h1>
 </section>
 <%=turbo_frame_tag "fullpage" do%>
-    <%= render partial: "reservation-tab", locals: { workouts: @workouts.all }%>
+    <%= render partial: "reservation-tab"%>
 <%end%>
