--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,7 @@
 <head>
 <% content_for :title, "Accueil" %>
 <% content_for :meta_description, "Louez des équipements pour vos séances de sport à un particulier" %>
+<%= canonical_tag -%>
 </head>
 <div class="jumbotron text-center" style="background-image: url('<%= asset_path('jumbotron.jpg') %>'); background-size: cover; background-position: center; height: 70vh; color: white;">
   <h1>(Re)Découvrez vos talents sportifs</h1>
