ok tout fonctionne

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,13 +26,13 @@
         <p class="ms-3 mt-2">Nombre de réservations: <%= @user.reserved_workouts.count %> </p>
 
         <% if @average_host_rating.nil? %>
-                <p>Pas encore de notes</p>
+            <p class="ms-3 mt-2">Pas encore de notes</p>
         <% else %>
             <p class="ms-3 mt-2">Note en tant que participant: <%= @average_host_rating.round(1) %>⭐️ </p>
         <% end %>
         
         <% if @average_user_rating.nil? %>
-                <p>Pas encore de notes</p>
+            <p class="ms-3 mt-2">Pas encore de notes</p>
         <% else %>
             <p class="ms-3 mt-2">Note en tant qu'hôte: <%= @average_user_rating.round(1) %>⭐️</p>
         <% end %>
