--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -1,25 +1,22 @@
+<p>Voici les retours de tes invités :</p>
 <% @workouts.each do |workout| %>
     <% workout.reservations.each do |reservation| %>
         
-    C'est la personne qui est venu chez moi et qui me note et commente : 
-    <br>
-    <%= link_to reservation.user.email, user_path(reservation.user) %>
-    <br>
-    Note :
-    <% if reservation.user_rating %>
-        <% reservation.user_rating.times do %>
-        <i class="bi bi-star-fill"></i>
+        <div class="reservation">            
+                Participant : <%= link_to reservation.user.email, user_path(reservation.user) %>
+                <br>
+                Note : 
+                <% if reservation.user_rating %>
+                    <% reservation.user_rating.times do %>
+                        <i class="bi bi-star-fill"></i>
+                    <% end %>
+                <% else %>
+                    Pas encore noté
+                <% end %>
+                <br>
+                Commentaire de la séance : <%= reservation.user_comment %>
+            </p>
+        </div>
     <% end %>
-    <% else %>
-    Pas encore noté
-    <% end %>
-    <br>
-    Commentaire de la séance : <%= reservation.user_comment %>
-    <br>
-    </p>
-            
-    <% end %>
-<% end %>
-                    
-                    
+<% end %>    
  
